--- a/meme.css
+++ b/meme.css
@@ -3,6 +3,7 @@
 }
 body {
     background-color: rgb(160, 160, 160);
+    height: 100vh
 }
 
 .flex-buttons {
@@ -15,11 +16,12 @@ body {
     text-decoration: none;
     background-color: lightskyblue;
     color: black;
-    margin: 10px;
+    margin: 10px 5px 0px 5px;
     padding: 10px;
     font-size: 18px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  }
+}
+
 input[type=text], input[type=url], select {
     width: 90%;
     padding: 10px;
@@ -34,20 +36,17 @@ input[type=text], input[type=url], select {
 }
 #item2 { grid-area: left; }
 #item3 { grid-area: center;
-}
-#item4 { grid-area: right;
     overflow-y: scroll;
     height: 100%;
 }
-#item5 { grid-area: buttons; }
-#item6 { grid-area: footer}
+#item4 { grid-area: footer}
 
 .grid-container {
     display: grid;
     grid-template-areas: 
         'header header header header header header header'
-        'left left center center center right right'
-        'left left buttons buttons buttons right right'
+        'left left center center center center center'
+        'left left center center center center center'
         'footer footer footer footer footer footer footer';
     grid-gap: 10px;
     background-color: blue;
